--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
             <ul id="taskList"></ul>
         </div>
 
-        <script type="module" src="app.js"></script>
+        <script src="app.js"></script>
     </body>
 </html>
